<resources>
    <string name="app_name">MagpieDemo</string>

    <string name="blood_pressure">Blood Pressure</string>
    <string name="glucose">Glucose</string>
    <string name="weight">Weight</string>

    <string name="today">Today</string>
    <string name="yesterday">Yesterday</string>

    <string name="label_english">English Text:</string>
    <string name="label_ec">Event Calculus:</string>

    <string name="glucose_rule_english">
        A \'brittle diabetes\' alert is triggered if glucose measurements (in mmol/L) go from less
        than or equal to 3.8 to more than or equal to 8.0 in six hours.\n\n
    </string>
    <string name="blood_pressure_rule_english">
        A \'pre-hypertension\' alert is triggered if at least in one week two blood pressure
        measurements (in mmHg) have systolic component between 120 and 139 and diastolic component
        between 80 and 89.\n\n
    </string>
    <string name="weight_rule_english">
        A \'gaining weight\' alert is triggered if the weight (in kg) goes from 2\u0025 lost with
        respect the initial weight to 1\u0025 gain in a period of one week.\n\n
    </string>

    <string name="glucose_rule_ec">
        initiatesAt(alert(p1)=\'brittle diabetes\',T):-\n
        \u0020\u0020\u0020\u0020\u0020\u0020\u0020\u0020\u0020\u0020\u0020\u0020\u0020
        happensAt(glucose(V1),T1),\n
        \u0020\u0020\u0020\u0020\u0020\u0020\u0020\u0020\u0020\u0020\u0020\u0020\u0020
        happensAt(glucose(V2),T2),\n
        \u0020\u0020\u0020\u0020\u0020\u0020\u0020\u0020\u0020\u0020\u0020\u0020\u0020
        V1 =&lt; 3.8,\n
        \u0020\u0020\u0020\u0020\u0020\u0020\u0020\u0020\u0020\u0020\u0020\u0020\u0020
        V2 &gt;= 8.0,\n
        \u0020\u0020\u0020\u0020\u0020\u0020\u0020\u0020\u0020\u0020\u0020\u0020\u0020
        T2 &gt; T1,\n
        \u0020\u0020\u0020\u0020\u0020\u0020\u0020\u0020\u0020\u0020\u0020\u0020\u0020
        last_six_hours(T1,T2),\n
        \u0020\u0020\u0020\u0020\u0020\u0020\u0020\u0020\u0020\u0020\u0020\u0020\u0020
        not happensAt(alert(p1),Ta),\n
        \u0020\u0020\u0020\u0020\u0020\u0020\u0020\u0020\u0020\u0020\u0020\u0020\u0020
        last_six_hours(Ta,T).
    </string>
    <string name="blood_pressure_rule_ec">
        initiatesAt(alert(p2)=\'pre-hypertension\',T):-\n
        \u0020\u0020\u0020\u0020\u0020\u0020\u0020\u0020\u0020\u0020\u0020\u0020\u0020
        not happensAt(alert(p2),Ta),\n
        \u0020\u0020\u0020\u0020\u0020\u0020\u0020\u0020\u0020\u0020\u0020\u0020\u0020
        last_week(Ta,T),\n
        \u0020\u0020\u0020\u0020\u0020\u0020\u0020\u0020\u0020\u0020\u0020\u0020\u0020
        more_or_equals_to(2,(\n
        \u0020\u0020\u0020\u0020\u0020\u0020\u0020\u0020\u0020\u0020\u0020\u0020\u0020\u0020\u0020\u0020
        happensAt(blood_pressure(Sys,Dias),Tev),\n
        \u0020\u0020\u0020\u0020\u0020\u0020\u0020\u0020\u0020\u0020\u0020\u0020\u0020\u0020\u0020\u0020
        (120 =&lt; Sys =&lt; 139, 80 =&lt; Dias =&lt; 89),\n
        \u0020\u0020\u0020\u0020\u0020\u0020\u0020\u0020\u0020\u0020\u0020\u0020\u0020\u0020\u0020\u0020
        last_week(Tev,T))).
    </string>
    <string name="weight_rule_ec">
        initiatesAt(alert(p3)=\'gaining weight\',T):-\n
        \u0020\u0020\u0020\u0020\u0020\u0020\u0020\u0020\u0020\u0020\u0020\u0020\u0020
        happensAt(weight(V1),T1),\n
        \u0020\u0020\u0020\u0020\u0020\u0020\u0020\u0020\u0020\u0020\u0020\u0020\u0020
        happensAt(weight(V2),T2),\n
        \u0020\u0020\u0020\u0020\u0020\u0020\u0020\u0020\u0020\u0020\u0020\u0020\u0020
        V1 =&lt; 93.7,\n
        \u0020\u0020\u0020\u0020\u0020\u0020\u0020\u0020\u0020\u0020\u0020\u0020\u0020
        V2 &gt;= 94.6,\n
        \u0020\u0020\u0020\u0020\u0020\u0020\u0020\u0020\u0020\u0020\u0020\u0020\u0020
        T2 &gt; T1,\n
        \u0020\u0020\u0020\u0020\u0020\u0020\u0020\u0020\u0020\u0020\u0020\u0020\u0020
        last_week(T1,T2),\n
        \u0020\u0020\u0020\u0020\u0020\u0020\u0020\u0020\u0020\u0020\u0020\u0020\u0020
        not happensAt(alert(p3),Ta),\n
        \u0020\u0020\u0020\u0020\u0020\u0020\u0020\u0020\u0020\u0020\u0020\u0020\u0020
        last_week(Ta,T).
    </string>

    <string name="about_title">About this Application</string>
    <string name="about_app">\nDemonstration of the MAGPIE agent platform presented at PAAMS\'17.\n</string>
    <string name="about_icons">Icons from Icons8.</string>
    <string name="about_mpAndroidChart">Charts implemented using the MPAndroidChart library.</string>
    <string name="about_url">https://www.icons8.com</string>
    <string name="about_url2">https://github.com/PhilJay/MPAndroidChart</string>
    <string name="pref_showMocked">showMocked</string>
    <string name="switchDummyData">Dummy Data</string>
    <string name="switchOff">OFF</string>
    <string name="switchOn">ON</string>
    <string name="about_dummyData">Display dummy Data</string>

</resources>
