<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/activity_horizontal_margin">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Switch
            android:id="@+id/dummyDataSwitch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_centerHorizontal="true"
            android:text="@string/about_dummyData"
            android:textOff="@string/switchOff"
            android:textOn="@string/switchOn"
            android:textSize="@dimen/font_size" />

    </RelativeLayout>

    <View
        android:layout_width="fill_parent"
        android:layout_height="1dip"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp"
        android:background="#000000" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/about_app"
        android:textSize="@dimen/font_size" />

    <TextView
        android:id="@+id/iconsTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/about_icons"
        android:textSize="@dimen/font_size" />

</LinearLayout>